# inputtino-web-client

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml
src/inputtino_web_client/: __init__.py  base_client.py  cli.py  keyboard.py  models.py
tests/: conftest.py  test_inputtino_web_client.py
tests/inputtino_web_client/: test_base_client.py  test_keyboard.py
